--- a/ClassLibrary1/Properties/AssemblyInfo.tt
+++ b/ClassLibrary1/Properties/AssemblyInfo.tt
@@ -47,7 +47,7 @@
       p.StartInfo.UseShellExecute = false;  
       p.StartInfo.RedirectStandardOutput = true; 
       p.StartInfo.FileName = $"AssemblyHasher.exe";
-      p.StartInfo.Arguments = @"C:\Users\bchehab\Desktop\AssemblyHasher\ClassLibrary1\bin\Debug\ClassLibrary1.dll";
+      p.StartInfo.Arguments = dllPath;
       p.Start();  
 
       // To avoid deadlocks, always read the output stream first and then wait.  
